-- +goose up
-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL
-- Generated at: 2026-03-04T07:53:07.986Z

CREATE TYPE "class_type" AS ENUM (
  'edema_ruh',
  'cealdish_commoner',
  'yllish_commoner',
  'aturan_nobleman',
  'vintish_nobleman'
);

CREATE TYPE "lodging_type" AS ENUM (
  'streets',
  'underthing',
  'mews',
  'ankers',
  'kings_drab',
  'grey_man',
  'golden_pony',
  'windy_tower',
  'horse_and_four',
  'pearl_of_imre',
  'spindle_and_draft'
);

CREATE TYPE "starting_lodging_type" AS ENUM (
  'ankers',
  'kings_drab',
  'golden_pony',
  'windy_tower',
  'horse_and_four',
  'spindle_and_draft'
);

CREATE TYPE "fields" AS ENUM (
  'alchemy',
  'archives',
  'arithmetics',
  'artificery',
  'linguisitics',
  'naming',
  'physicking',
  'rhetoric_and_logic',
  'sympathy'
);

CREATE TABLE "users" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "username" varchar UNIQUE NOT NULL
);

CREATE TABLE "games" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "game_master" integer NOT NULL,
  "name" varchar,
  "type" varchar,
  "type_number" varchar
);

CREATE TABLE "players" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "user_id" integer NOT NULL,
  "game_id" integer NOT NULL,
  "name" varchar,
  "alive" bool NOT NULL DEFAULT true,
  "skindancer" bool NOT NULL DEFAULT false,
  "class" class_type
);

CREATE TABLE "game_turns" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "game_id" integer NOT NULL,
  "name" varchar,
  "writeup" varchar,
  "term" integer NOT NULL,
  "month" integer NOT NULL,
  "active" bool NOT NULL DEFAULT false
);

CREATE TABLE "player_status" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "player_id" integer NOT NULL,
  "turn_id" integer NOT NULL,
  "sane" bool NOT NULL DEFAULT true,
  "crockery" bool NOT NULL DEFAULT false,
  "lodging" bool DEFAULT true,
  "imre" bool DEFAULT false,
  "university" bool DEFAULT true,
  "medica" bool DEFAULT false,
  "coin" float NOT NULL DEFAULT 0,
  "ep_alchemy" integer NOT NULL DEFAULT 0,
  "ep_archives" integer NOT NULL DEFAULT 0,
  "ep_arithmetics" integer NOT NULL DEFAULT 0,
  "ep_artificery" integer NOT NULL DEFAULT 0,
  "ep_linguistics" integer NOT NULL DEFAULT 0,
  "ep_naming" integer NOT NULL DEFAULT 0,
  "ep_physicking" integer NOT NULL DEFAULT 0,
  "ep_rhetoric_and_logic" integer NOT NULL DEFAULT 0,
  "ep_sympathy" integer NOT NULL DEFAULT 0
);

CREATE TABLE "player_turns" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "player_id" integer NOT NULL,
  "turn_id" integer NOT NULL,
  "posts" integer NOT NULL DEFAULT 0,
  "private_messages" integer NOT NULL DEFAULT 0,
  "quality_posts" integer NOT NULL DEFAULT 0,
  "quality_rp" integer NOT NULL DEFAULT 0
);

CREATE TABLE "actions" (
  "id" integer PRIMARY KEY NOT NULL,
  "lodging" lodging_type NOT NULL DEFAULT 'streets',
  "visit_imre" bool NOT NULL DEFAULT false,
  "attend_university" bool NOT NULL DEFAULT false
);

CREATE TABLE "complaints" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "action_id" integer NOT NULL,
  "target_id" integer
);

CREATE TABLE "elevation_points" (
  "action_id" integer PRIMARY KEY NOT NULL,
  "ep_alchemy" integer NOT NULL DEFAULT 0,
  "ep_archives" integer NOT NULL DEFAULT 0,
  "ep_arithmetics" integer NOT NULL DEFAULT 0,
  "ep_artificery" integer NOT NULL DEFAULT 0,
  "ep_linguistics" integer NOT NULL DEFAULT 0,
  "ep_naming" integer NOT NULL DEFAULT 0,
  "ep_physicking" integer NOT NULL DEFAULT 0,
  "ep_rhetoric_and_logic" integer NOT NULL DEFAULT 0,
  "ep_sympathy" integer NOT NULL DEFAULT 0
);

CREATE TABLE "imre_actions" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "action_id" integer NOT NULL,
  "eolian_pipes" bool,
  "eolian_practice" bool,
  "giles_loan" float,
  "devi_loan" float,
  "dice_bet" float,
  "nox_nahlrout" integer,
  "nox_couriers" integer,
  "nox_bloodless" integer,
  "nox_gram" integer,
  "black_market_mommet" integer,
  "black_market_bodyguard" bool,
  "black_market_bodygaurd_target" integer,
  "black_market_assassin" bool,
  "black_market_assassin_target" integer,
  "black_market_contracts" bool
);

CREATE TABLE "contracts" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "game_id" integer NOT NULL,
  "name" varchar,
  "description" varchar,
  "requesting_player_id" integer,
  "accepted_player_id" integer,
  "bounty_coin" float,
  "bounty_item" varchar
);

CREATE TABLE "imre_contract_action" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "imre_action_id" integer NOT NULL,
  "contract_id" integer
);

ALTER TABLE "games" ADD FOREIGN KEY ("game_master") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "players" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "players" ADD FOREIGN KEY ("game_id") REFERENCES "games" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "game_turns" ADD FOREIGN KEY ("game_id") REFERENCES "games" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "player_status" ADD FOREIGN KEY ("player_id") REFERENCES "players" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "player_status" ADD FOREIGN KEY ("turn_id") REFERENCES "game_turns" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "player_turns" ADD FOREIGN KEY ("player_id") REFERENCES "players" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "player_turns" ADD FOREIGN KEY ("turn_id") REFERENCES "game_turns" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "actions" ADD FOREIGN KEY ("id") REFERENCES "player_turns" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "complaints" ADD FOREIGN KEY ("action_id") REFERENCES "actions" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "complaints" ADD FOREIGN KEY ("target_id") REFERENCES "players" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "elevation_points" ADD FOREIGN KEY ("action_id") REFERENCES "actions" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "imre_actions" ADD FOREIGN KEY ("action_id") REFERENCES "actions" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "imre_actions" ADD FOREIGN KEY ("black_market_mommet") REFERENCES "players" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "imre_actions" ADD FOREIGN KEY ("black_market_bodygaurd_target") REFERENCES "players" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "imre_actions" ADD FOREIGN KEY ("black_market_assassin_target") REFERENCES "players" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "contracts" ADD FOREIGN KEY ("game_id") REFERENCES "games" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "contracts" ADD FOREIGN KEY ("requesting_player_id") REFERENCES "players" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "contracts" ADD FOREIGN KEY ("accepted_player_id") REFERENCES "players" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "imre_contract_action" ADD FOREIGN KEY ("imre_action_id") REFERENCES "imre_actions" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "imre_contract_action" ADD FOREIGN KEY ("contract_id") REFERENCES "contracts" ("id") DEFERRABLE INITIALLY IMMEDIATE;
