// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table users {
  id integer [primary key, increment]
  created_at timestamp [not null, default: `now()`]
  username varchar [not null, unique]

}
// Ref: games.id < players.game_id

// Ref: users.id < players.user_id

// Ref: users.id < games.game_master


Table games {
  id integer [primary key, increment]
  created_at timestamp [not null, default: `now()`]
  game_master integer [ref: > users.id, not null]
  name varchar
  type varchar
  type_number varchar
  // current_turn_id integer
}

Table players {
  id integer [primary key, increment]
  created_at timestamp [not null, default: `now()`]
  user_id integer [ref: > users.id, not null]
  game_id integer [ref: > games.id, not null]

  name varchar

  alive bool [default: true, not null]
  skindancer bool [default: false, not null]
  class class_type
}

Enum class_type {
  edema_ruh
  cealdish_commoner
  yllish_commoner
  aturan_nobleman
  vintish_nobleman
}

Table game_turns {
  id integer [primary key, increment]
  created_at timestamp [not null, default: `now()`]

  game_id integer [ref: > games.id, not null]

  name varchar
  writeup varchar

  term integer [not null]
  month integer [not null]

  active bool [default: false, not null]

}

Table player_status {
  id integer [primary key, increment]
  created_at timestamp [not null, default: `now()`]

  player_id integer [ref: > players.id, not null]
  turn_id integer [ref: > game_turns.id, not null]


  sane bool [default: true, not null]
  crockery bool [default: false, not null]

  lodging bool [default: true]
  imre bool [default: false]
  university bool [default: true]

  medica bool [default: false]

  coin float [default: 0, not null]

  ep_alchemy integer [default: 0, not null]
  ep_archives integer [default: 0, not null]
  ep_arithmetics integer [default: 0, not null]
  ep_artificery integer [default: 0, not null]
  ep_linguistics integer [default: 0, not null]
  ep_naming integer [default: 0, not null]
  ep_physicking integer [default: 0, not null]
  ep_rhetoric_and_logic integer [default: 0, not null]
  ep_sympathy integer [default: 0, not null]

  // items
  // action periods?
}

Table player_turns {
  id integer [primary key, increment]
  created_at timestamp [not null, default: `now()`]
  player_id integer [ref: > players.id, not null]
  turn_id integer [ref: > game_turns.id, not null]

  // GM managed data
  posts integer [default: 0, not null]
  private_messages integer [default: 0, not null]
  quality_posts integer [default: 0, not null]
  quality_rp integer [default: 0, not null]
}


Enum lodging_type {
  streets
  underthing
  mews
  ankers
  kings_drab
  grey_man
  golden_pony
  windy_tower
  horse_and_four
  pearl_of_imre
  spindle_and_draft
}

Enum starting_lodging_type {
    ankers
    kings_drab
    golden_pony
    windy_tower
    horse_and_four
    spindle_and_draft
}


Table actions {
  id integer [primary key, ref: - player_turns.id, not null]

  lodging lodging_type [default: lodging_type.streets, not null]
  visit_imre bool [default: false, not null]
  attend_university bool [default: false, not null]
}


Table complaints {
  id integer [primary key, increment]
  created_at timestamp [not null, default: `now()`]
  action_id integer [ref: - actions.id, not null]
  // player_id integer [ref: > players.id]
  target_id integer [ref: > players.id]
}

Enum fields {
    alchemy
    archives
    arithmetics
    artificery
    linguisitics
    naming
    physicking
    rhetoric_and_logic
    sympathy
}

// Submitted elevation points
Table elevation_points {
  // id integer [primary key, increment]
  // created_at timestamp [not null, default: `now()`]
  // player_id integer [ref: > players.id]
  action_id integer [primary key, ref: - actions.id, not null]
  ep_alchemy integer [default: 0, not null]
  ep_archives integer [default: 0, not null]
  ep_arithmetics integer [default: 0, not null]
  ep_artificery integer [default: 0, not null]
  ep_linguistics integer [default: 0, not null]
  ep_naming integer [default: 0, not null]
  ep_physicking integer [default: 0, not null]
  ep_rhetoric_and_logic integer [default: 0, not null]
  ep_sympathy integer [default: 0, not null]
}



Table imre_actions {
  id integer [primary key, increment]
  created_at timestamp [not null, default: `now()`]
  action_id integer [ref: - actions.id, not null]

  eolian_pipes bool
  eolian_practice bool

  giles_loan float
  devi_loan float
  // devi_collateral bool
  // Need track collateral - separate table?

  dice_bet float
  // table for numbers bet?

  nox_nahlrout integer
  nox_couriers integer // bool with extra table?
  nox_bloodless integer
  nox_gram integer

  black_market_mommet integer [ref: > players.id]
  black_market_bodyguard bool
  black_market_bodygaurd_target integer [ref: > players.id]
  black_market_assassin bool
  black_market_assassin_target integer [ref: > players.id]
  black_market_contracts bool
  // contracts

}


Table contracts {
  id integer [primary key, increment]
  created_at timestamp [not null, default: `now()`]

  game_id integer [ref: > games.id, not null]

  name varchar
  description varchar
  requesting_player_id integer [ref: > players.id]
  accepted_player_id integer [ref: > players.id]

  bounty_coin float
  bounty_item varchar
}

Table imre_contract_action {
  id integer [primary key, increment]
  created_at timestamp [not null, default: `now()`]

  imre_action_id integer [ref: > imre_actions.id, not null]
  contract_id integer [ref: - contracts.id]
}





// Current elevation points
// Table elevation_points {
//   id integer [primary key, increment]
//   created_at timestamp [not null, default: `now()`]
//   player_id integer [ref: > players.id]
//   turn varchar
//   ep_linguistics integer [default: 0, not null]
//   ep_arithmetics integer [default: 0, not null]
//   ep_rhetoric_and_logic integer [default: 0, not null]
//   ep_archives integer [default: 0, not null]
//   ep_sympathy integer [default: 0, not null]
//   ep_physicking integer [default: 0, not null]
//   ep_alchemy integer [default: 0, not null]
//   ep_artificery integer [default: 0, not null]
//   ep_naming integer [default: 0, not null]
// }



// Ref user_posts: posts.user_id > users.id // many-to-one

// Ref: users.id < follows.following_user_id

// Ref: users.id < follows.followed_user_id
